fix admin menu not showing up with conditional statement. center page

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -43,6 +43,7 @@
   max-width: 140vh;
   border: 2px solid gray;
   border-radius: 10px;
+  margin: auto;
 }
 
 .banner-container {
